#------------------------------------------------------------------------------#
#
# add directories
#
#------------------------------------------------------------------------------#
add_subdirectory(libSurfaceComparison)
add_subdirectory(libAdjustOutletAngle)
#add_subdirectory(libdtOOPython)
add_subdirectory(libdtOOPythonSWIG)
